more style tweaks, fixed horiz-scroll issue on mobile.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -246,7 +246,15 @@ h2.score
 .cancel
   margin-top: 2rem
 
+.nice_list .col-md-11
+  margin-bottom: 3rem
+
 //mockup page styles
+
+.subgoal-box
+  margin-bottom: 3rem
+  h3, p
+    display: inline
 
 .status-box
   margin-top: 2rem
